--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
 
         <footer class="app-footer">
-            <p>&copy; <span id="current-year"></span> 誰でしょうクイズ Zenith</p>
+            <p>&copy; <span id="current-year"></span> chat room: 子子と子</p>
         </footer>
     </div>
     <canvas id="confetti-canvas"></canvas>
