--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>誰の発言でしょう？</title> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>誰の発言でしょう??</title> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&family=Poppins:wght@600;700;800&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
     <div class="app-container">
         <header class="quiz-header">
             <h1 class="game-title">
-                <span>誰の</span><span>発言</span><span>でしょう？</span>
+                <span>誰の</span><span>発言</span><span>でしょう??</span>
             </h1>
             <div class="progress-info">
                 <div id="progress-text" class="progress-text">問題 1 / 10</div>
