--- a/index.html
+++ b/index.html
@@ -5,58 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>誰の発言でしょう??</title> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&family=Poppins:wght@600;700;800&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="app-container">
-        <header class="quiz-header">
-            <h1 class="game-title">
-                <span>誰の</span><span>発言</span><span>でしょう??</span>
-            </h1>
-            <div class="progress-info">
-                <div id="progress-text" class="progress-text">問題 1 / 10</div>
-                <div class="progress-bar-container">
-                    <div id="progress-bar" class="progress-bar"></div>
-                </div>
-            </div>
-        </header>
-
-        <main id="quiz-area" class="quiz-content">
-            <div class="message-display-area">
-                <p id="message-text" class="message-bubble"></p>
-            </div>
-            <div id="choices-area" class="choices-container">
-                </div>
-            <div class="feedback-action-area">
-                <p id="feedback-text" class="feedback-text"></p>
-                <button id="next-question-btn" class="action-button next-button" style="display:none;">
-                    <i class="fas fa-arrow-right icon-before"></i> 次の問題へ
-                </button>
-            </div>
-        </main>
-
-        <section id="result-area" class="result-display-area" style="display:none;">
-            <div class="result-card">
-                <h2 class="result-card-title">クイズ結果</h2>
-                <div id="result-icon-container" class="result-icon-container">
+    <div class="app-wrapper">
+        <div class="app-container">
+            <header class="quiz-header">
+                <h1 class="game-title">
+                    誰の発言でしょう <span class="game-title-edition">??</span>
+                </h1>
+                <div class="progress-info">
+                    <div id="progress-text" class="progress-text">問題 1 / 10</div>
+                    <div class="progress-bar-container">
+                        <div id="progress-bar" class="progress-bar"></div>
                     </div>
-                <p id="result-rank-title" class="result-rank-title"></p>
-                <div class="final-score-container">
-                    <span class="score-label-final">SCORE</span>
-                    <span id="final-score-value" class="final-score-value">0</span>
-                    <span class="total-questions-final">/ <span id="total-questions-on-result">10</span></span>
                 </div>
-                <p id="result-message" class="result-message"></p>
-                <button id="restart-btn" class="action-button restart-button">
-                    <i class="fas fa-redo icon-before"></i> もう一度挑戦！
-                </button>
-            </div>
-        </section>
+            </header>
 
-        <footer class="app-footer">
-            <p>&copy; <span id="current-year"></span> chat room: 子子と子</p>
-        </footer>
+            <main id="quiz-area" class="quiz-content">
+                <div class="message-display-area">
+                    <div id="message-text" class="message-bubble"> {/* Changed p to div for more flexible styling with pseudo-elements or nested spans */}
+                        <i class="fas fa-quote-left message-quote-icon"></i>
+                        <span id="message-text-content"></span> {/* Actual text will go here */}
+                    </div>
+                </div>
+                <div id="choices-area" class="choices-container">
+                    </div>
+                <div class="feedback-action-area">
+                    <p id="feedback-text" class="feedback-text"></p>
+                    <button id="next-question-btn" class="action-button" style="display:none;">
+                        次の問題へ <i class="fas fa-arrow-right icon-after"></i>
+                    </button>
+                </div>
+            </main>
+
+            <section id="result-area" class="result-display-area" style="display:none;">
+                <div class="result-card">
+                    <h2 class="result-card-title">クイズリザルト</h2>
+                    <div id="result-icon-container" class="result-icon-container">
+                        </div>
+                    <p id="result-rank-title" class="result-rank-title"></p>
+                    <div class="final-score-display">
+                        <span class="final-score-label">SCORE</span>
+                        <span id="final-score-value" class="final-score-value">0</span>
+                        <span class="total-questions-label">/ <span id="total-questions-on-result">10</span></span>
+                    </div>
+                    <p id="result-message" class="result-message"></p>
+                    <button id="restart-btn" class="action-button restart-button">
+                        <i class="fas fa-redo icon-before"></i> もう一度挑戦！
+                    </button>
+                </div>
+            </section>
+
+            <footer class="app-footer">
+                <p>&copy; <span id="current-year"></span> chat room 子子と子</p>
+            </footer>
+        </div>
     </div>
     <canvas id="confetti-canvas"></canvas>
 
