--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
             <main id="quiz-area" class="quiz-content">
                 <div class="message-display-area">
-                    <div id="message-text" class="message-bubble"> {/* Changed p to div for more flexible styling with pseudo-elements or nested spans */}
+                    <div id="message-text" class="message-bubble"> 
                         <i class="fas fa-quote-left message-quote-icon"></i>
-                        <span id="message-text-content"></span> {/* Actual text will go here */}
+                        <span id="message-text-content"></span> 
                     </div>
                 </div>
                 <div id="choices-area" class="choices-container">
