--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>誰の発言でしょう??</title> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>誰の発言でしょう?? 🤔</title> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -14,7 +14,8 @@
         <div class="app-container">
             <header class="quiz-header">
                 <h1 class="game-title">
-                    誰の発言でしょう<span class="game-title-edition">??</span>
+                    誰の発言でしょう
+                    <span class="game-title-edition">??</span>
                 </h1>
                 <div class="progress-info">
                     <div id="progress-text" class="progress-text">問題 1 / 10</div>
@@ -26,9 +27,9 @@
 
             <main id="quiz-area" class="quiz-content">
                 <div class="message-display-area">
-                    <div id="message-text" class="message-bubble"> 
+                    <div id="message-text" class="message-bubble">
                         <i class="fas fa-quote-left message-quote-icon"></i>
-                        <span id="message-text-content"></span> 
+                        <span id="message-text-content"></span>
                     </div>
                 </div>
                 <div id="choices-area" class="choices-container">
@@ -60,8 +61,7 @@
             </section>
 
             <footer class="app-footer">
-                <p>&copy; <span id="current-year"></span> chat room 子子と子</p>
-            </footer>
+                <p>&copy; <span id="current-year"></span> 誰の発言でしょう?? Apex. All rights reserved.</p> </footer>
         </div>
     </div>
     <canvas id="confetti-canvas"></canvas>
