--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </section>
 
             <footer class="app-footer">
-                <p>&copy; <span id="current-year"></span> 誰の発言でしょう?? Apex. All rights reserved.</p> </footer>
+                <p>&copy; <span id="current-year"></span> chat room 子子と子</p> </footer>
         </div>
     </div>
     <canvas id="confetti-canvas"></canvas>
