--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="current-score-display">
-                        <i class="fas fa-star score-icon"></i>スコア: <span id="current-score-value">0</span>
+                        <i class="fas fa-star score-icon"></i>score: <span id="current-score-value">0</span>
                     </div>
                 </div>
             </header>
