--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
 
             <footer class="app-footer">
-                <p>&copy; <span id="current-year"></span> 誰の発言でしょう Pro. All rights reserved.</p>
+                <p>&copy; <span id="current-year"></span> 誰の発言でしょう chat room 子子と子</p>
             </footer>
         </div>
     </div>
