--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <section id="result-area" class="result-display-area" style="display:none;">
                 <div class="result-card">
-                    <h2 class="result-card-title">クイズリザルト</h2>
+                    <h2 class="result-card-title">Quiz Result!</h2>
                     <div id="result-icon-container" class="result-icon-container">
                     </div>
                     <p id="result-rank-title" class="result-rank-title"></p>
