--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
 
             <footer class="app-footer">
-                <p>&copy; <span id="current-year"></span> Chat Room 子子と子</p>
+                <p>&copy; <span id="current-year"></span> Chat Room 子子と子(2025.3.27~5.24)</p>
             </footer>
         </div>
     </div>
